# mlirAgent

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.codex/skills/mlir-evolve/: SKILL.md
.codex/skills/mlir-evolve/agents/: openai.yaml
.codex/skills/mlir-evolve/references/: graph-ingestion.md  infra.md  repo-map.md  tool-conventions.md
docs/: agent_integration.md  td_cmake_todo.txt
docs/meetings/: MEETING_20260218.md
experiments/: README.md
experiments/iree_artifacts/: compile_and_organize.sh  example_onnx_fc.py  example_onnx_model.py
experiments/torchao/: enable_mxfp8_iree.py  export_iree.py  quantize_vit.py  test_torch_compile.py
src/mlirAgent/: cli.py  config.py  mcp_server.py
src/mlirAgent/evolve/: README.md  adapters.py  evaluator.py  gepa_adapter.py  gepa_manual_lm.py  gepa_run.py  manual_run.py  providers.py  run.py
src/mlirAgent/evolve/tasks/: base.py  (+1 more)
src/mlirAgent/mining/: enrich_metadata.py  extract_test_prompt.py  mine_commits.py  synthesize_recipes.py
src/mlirAgent/rlm/: analysis.py  wrapper.py
src/mlirAgent/scip/: analyze_file_impact.py  check_graph_status.py  debug_index.py  dump_raw_scip.py  ingest_codegraph.py  inspect_graph_samples.py  test_neo4j_version.py  update_graph.py
src/mlirAgent/tools/: _provenance_common.py  build.py  compiler.py  evaluator.py  provenance.py  trace_provenance.py  verifier.py
tests/: manual_compiler_tool_config.py  test_build_tool.py  test_folder_structure_passes.py  test_mlir_bindings.py  test_neo4j_version.py  test_provenance.py  test_scip_structure.py  test_tool_verifier.py
(+7 files in other folders)
